Fix dependency on firebird-base

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,8 @@ classifiers =
 [options]
 zip_safe = True
 python_requires = >=3.8, <4
+install_requires =
+    firebird-base>=0.5.0
 packages = find_namespace:
 
 [options.packages.find]
