--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ all-files=True
 
 [metadata]
 name = firebird-driver
-version = 0.6.0
+version = 0.7.0
 description = Firebird driver
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
@@ -37,6 +37,7 @@ zip_safe = True
 python_requires = >=3.8, <4
 install_requires =
     firebird-base>=0.6.0
+    python-dateutil>=2.8
 packages = find_namespace:
 
 [options.packages.find]
