--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ all-files=True
 
 [metadata]
 name = firebird-driver
-version = 0.7.0
+version = 0.8.0
 description = Firebird driver
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
@@ -21,7 +21,7 @@ project_urls =
     Funding = https://www.firebirdsql.org/en/donate/
     Source = https://github.com/FirebirdSQL/python3-driver
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
