Add call to iProvider.shutdown on application exit; Release 1.10.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,10 @@ cov-report = [
   "- coverage combine",
   "coverage report",
 ]
+cov-html = [
+  "- coverage combine",
+  "coverage html",
+]
 cov = [
   "test-cov",
   "cov-report",
