--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,9 +9,11 @@ version: 2
 sphinx:
     configuration: docs/conf.py
 
-
+build:
+  os: "ubuntu-22.04"
+    
 # Optionally set the version of Python and requirements required to build your docs
 python:
-    version: 3.8
+    version: 3.11
     install:
         - requirements: docs/requirements.txt
