--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,9 +11,10 @@ sphinx:
 
 build:
   os: "ubuntu-22.04"
-    
+  tools:
+    python: "3.11"
+        
 # Optionally set the version of Python and requirements required to build your docs
 python:
-    version: 3.11
     install:
         - requirements: docs/requirements.txt
