--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
   "Topic :: Database",
 ]
 dependencies = [
-  "firebird-base>=1.8.0",
+  "firebird-base~=1.8",
   "python-dateutil>=2.8",
 ]
 
