--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling>=1.27.0"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -7,7 +7,7 @@ name = "firebird-driver"
 description = "Firebird driver for Python"
 dynamic = ["version"]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 license = { file = "LICENSE" }
 authors = [
   { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"},
@@ -18,11 +18,9 @@ classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3 :: Only",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Operating System :: POSIX :: Linux",
   "Operating System :: Microsoft :: Windows",
   "Operating System :: MacOS",
@@ -30,8 +28,8 @@ classifiers = [
   "Topic :: Database",
 ]
 dependencies = [
-  "firebird-base~=1.8",
-  "python-dateutil>=2.8",
+  #"firebird-base @file:////home/job/python/projects/firebird-base",
+  "firebird-base~=2.0",
 ]
 
 [project.urls]
@@ -50,18 +48,25 @@ include = ["src"]
 [tool.hatch.build.targets.wheel]
 packages = ["src/firebird"]
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.hatch.envs.default]
 dependencies = [
 ]
+
+[tool.hatch.envs.hatch-test]
+extra-args = ["--host=localhost"]
 
 [tool.hatch.envs.test]
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
 ]
+
 [tool.hatch.envs.test.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
+test = "pytest --host=localhost {args:tests}"
+test-cov = "coverage run -m pytest --host=localhost {args:tests}"
 cov-report = [
   "- coverage combine",
   "coverage report",
@@ -76,8 +81,8 @@ cov = [
 ]
 version = "python --version"
 
-[[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+[[tool.hatch.envs.hatch-test.matrix]]
+python = ["3.11", "3.12", "3.13"]
 
 [tool.hatch.envs.doc]
 detached = false
@@ -95,63 +100,13 @@ docset = [
   "cd docs; VERSION=`hatch version` ; tar --exclude='.DS_Store' -cvzf ../dist/firebird-driver-$VERSION-docset.tgz firebird-driver.docset",
 ]
 
-[tool.hatch.envs.lint]
-detached = true
-dependencies = [
-  "black>=23.1.0",
-  "mypy>=1.0.0",
-  "ruff>=0.0.243",
-]
-[tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/firebird/driver tests}"
-style = [
-  "ruff {args:.}",
-  "black --check --diff {args:.}",
-]
-fmt = [
-  "black {args:.}",
-  "ruff --fix {args:.}",
-  "style",
-]
-all = [
-  "style",
-  "typing",
-]
-
-[tool.black]
-target-version = ["py38"]
-line-length = 120
-skip-string-normalization = true
-
 [tool.ruff]
-target-version = "py38"
+target-version = "py311"
 line-length = 120
-select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
+
+[tool.ruff.lint]
+select = ["A", "ARG", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
+  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "T", "TID", "UP", "W", "YTT",
 ]
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
@@ -162,19 +117,29 @@ ignore = [
   "S105", "S106", "S107",
   # Ignore complexity
   "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+  #
+  "E741",
+  # Allow relative imports
+  "TID252",
+  # Allow literals in exceptions
+  "EM101", "EM102",
+  # Single quotes instead double
+  "Q000"
 ]
 unfixable = [
   # Don't touch unused imports
   "F401",
+  # Don't change single quotes to double
+  "Q000"
 ]
 
-[tool.ruff.isort]
-known-first-party = ["firebird.driver"]
+[tool.ruff.lint.isort]
+known-first-party = ["firebird.base"]
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
@@ -187,8 +152,8 @@ omit = [
 ]
 
 [tool.coverage.paths]
-firebird_driver = ["src/python", "*/python/src/firebird/driver"]
-tests = ["tests", "*/python/tests"]
+firebird_base = ["src/firebird/driver"]
+tests = ["tests"]
 
 [tool.coverage.report]
 exclude_lines = [
